# panah-papua-spasial

./: .gitignore  README.md  galery.html  index.html  peta.html  peta_admin.html  peta_sagu.html  peta_topo.html  pyproject.toml  start_env.sh
data/SHP/: Administrasi.dbf  Administrasi.sbn  Administrasi.sbx  Administrasi.shp.xml  Administrasi.shx  Daerah_Sagu.dbf  Daerah_Sagu.sbn  Daerah_Sagu.sbx  Daerah_Sagu.shp.xml  Daerah_Sagu.shx  Topografi.dbf  Topografi.sbn  Topografi.sbx  Topografi.shp.xml  Topografi.shx
notebook/: ADMINISTRASI TELUK BINTUNI.ipynb  ANALISIS SAGU TELUK BINTUNI.ipynb  TOPOGRAFI TELUK BINTUNI-kategorik.ipynb  TOPOGRAFI TELUK BINTUNI.ipynb
web/pages/: index.html  peta.html
