[tool.poetry]
name = "fastapi-plotly-dash"
version = "0.1.0"
description = "Sample integration of FastAPI and Dash"
authors = ["Russ Snyder <ru.snyder@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.9"
dash = "^2.0.0"
fastapi = "*"
pandas = "*"
uvicorn = "*"
ipykernel = "^6.29.0"
nbformat = "^5.9.2"
geopandas = "^0.14.3"
folium = "^0.15.1"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

